--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,5 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - name: Start updating
-        run: cd $GITHUB_WORKSPACE && cmd \c "$GITHUB_WORKSPACE\update.bat"
+        run: cd $GITHUB_WORKSPACE && cmd.exe \c "$GITHUB_WORKSPACE\update.bat"
         
