--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,12 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: windows-latest
+    runs-on: windows-2022
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - name: Start updating
-        run: cd $GITHUB_WORKSPACE && cmd.exe \c "$GITHUB_WORKSPACE\update.bat"
-        
+        run: cd $GITHUB_WORKSPACE && update.bat
+        shell: cmd
