--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - name: Start updating
-        run: cd $GITHUB_WORKSPACE && update
+        run: |
+         cd $GITHUB_WORKSPACE
+         update
         shell: cmd
