--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,9 @@
 name: Update cases
 
 # Controls when the workflow will run
-
+on:
+  schedule:
+  - cron: * * * * *
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -19,6 +21,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - uses: szenius/set-timezone@v1.0
+             with:
+             timezoneLinux: "Asia/Kuala_Lumpur"
       - name: Start updating
         run: |
          cd $GITHUB_WORKSPACE
