--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: Update cases
 # Controls when the workflow will run
 on:
   schedule:
-  - cron: * * * * *
+  - cron: 0 * * * *
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
