--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,15 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Update cases
-
-# Controls when the workflow will run
-
-
-  # Allows you to run this workflow manually from the Actions tab
 on:
+  schedule:
+  # GitHub Actions uses UTC. This time is converted from MYT to UTC.
+  - cron: "0 16,2,7,11,14 * * *"
   workflow_dispatch:
   
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  update:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       -     uses: szenius/set-timezone@v1.0
             with:
@@ -28,3 +19,11 @@ jobs:
          cd $GITHUB_WORKSPACE
          chmod +x update.sh
          sh update.sh
+      - name: Commit to GitHub
+        run: |
+         echo Pushing to GitHub...
+         git config --global user.email "tanyuxuan2005@gmail.com"
+         git config --global user.name "weareblahs/covidcases auto update bot"
+         git add .
+         git commit -m "Update cases and deaths"
+         git push
