--- a/.github/workflows/twitter.yml
+++ b/.github/workflows/twitter.yml
@@ -24,7 +24,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
+      - name: Install tweepy
+        run:  pip install tweepy
       - name: Update
         env:
             TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
