--- a/.github/workflows/twitter.yml
+++ b/.github/workflows/twitter.yml
@@ -3,12 +3,7 @@
 name: Update to Twitter
 
 # Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -28,10 +23,10 @@ jobs:
         run:  pip install tweepy
       - name: Update
         env:
-            TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-            TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-            TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
-            TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+            ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+            ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+            CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+            CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
         run: |
           cd $GITHUB_WORKSPACE
           python twitter_bot.py
