--- a/.github/workflows/twitter.yml
+++ b/.github/workflows/twitter.yml
@@ -39,3 +39,4 @@ jobs:
           echo consumer_secret is $TWICS
           echo access_token is $TWIAT
           echo access_token_secret is $TWIATS
+          py twitter_bot.py
