--- a/.github/workflows/twitter.yml
+++ b/.github/workflows/twitter.yml
@@ -1,22 +1,21 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Update to Twitter
-
-  # Allows you to run this workflow manually from the Actions tab
 on:
   workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  schedule:
+  - cron: "0 2 * * *" # Runs at 10:00am GMT+8 (converted as 2:00am UTC)
 jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    # Steps represent a sequence of tasks that will be executed as part of the job
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - uses: szenius/set-timezone@v1.0
+        with:
+            timezoneLinux: "Asia/Kuala_Lumpur"
+            timezoneMacos: "Asia/Kuala_Lumpur"
       - name: Install tweepy
         run:  pip install tweepy
       - name: Update
